# fastapi-homework

./: README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/models/: database.py  models.py
