[tool.poetry]
name = "fastapi-test-project"
version = "0.1.0"
description = "no comment"
authors = ["Artem Makushkin <artem555525fssg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.104.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
